# aec-hack-gscan

./: .gitignore  README.md  hello.py  pyproject.toml
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  MeasurementTool.tsx  Neuroglancer.tsx
frontend/src/components/: MeasurementTool.tsx
frontend/src/views/: SliceView.tsx
nifti-generator/: README.md  main.py  pyproject.toml
nifti-generator/src/: main.py
precomputation/: precomputation_guide.md  precompute.sh
python/: README.md  pyproject.toml
python-server/: example.py  pkl_to_neuroglancer_server.py
python/neuroglancer-pyapp/: jupyter-notebook-demo.ipynb  pyproject.toml
python/nifti-generator/: README.md  pyproject.toml
python/precomputation/: pyproject.toml
