[project]
name = "nifti-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "JoostGevaert", email = "jhngevaert@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "nibabel>=5.3.2",
    "numpy>=2.1.3",
]

[project.scripts]
nifti-generator = "nifti_generator.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
